nginx/base-pp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: base-pp
  namespace: base-prospect
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: base-pp.dsira.bnpparibas.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: base-prospect-front
              port:
                number: 8082
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: base-prospect-back
              port:
                number: 8082
