nginx/greeting-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: greeting
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: dsira.bnpparibas.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: greeting
              port:
                number: 8086
