nginx/pgadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: base-prospect
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: pgadmin.dsira.bnpparibas.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: pgadmin
              port:
                number: 8084
